# findBestSlot

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  README.md  app.py  desktop_app.py  gacha_gear_optimizer_unattended_goal.md  pyproject.toml
.github/workflows/: ci.yml
assets/: NOTICE.md
configs/agents/: hsr.yaml  zzz.yaml
configs/characters/: hsr_placeholder.yaml  zzz_starlight_billy.yaml  zzz_template_anomaly.yaml
configs/games/: hsr.yaml  zzz.yaml
configs/probabilities/: hsr_default.yaml  zzz_default.yaml
desktop/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
desktop/src/: App.test.tsx  App.tsx  api.ts  main.tsx  mockBackend.ts  styles.css  types.ts  workspaceUtils.test.ts  workspaceUtils.ts
desktop/src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: action_ev_refactor_report.md  code_smell_backlog.md  current_calculation_logic_for_gpt_review.md  horizon2_action_plan_design_brief_for_gpt.md  hsr_relic_research.md  multi_agent_inventory_design.md  next_steps.md  tauri_rust_migration.md
examples/: hsr_candidate_body.yaml  hsr_placeholder_current.yaml  zzz_billy_current.yaml  zzz_candidate_slot4.yaml  zzz_candidate_slot5.yaml
reports/: acceptance.md  acceptance_checks.json  action_ev_parallel_profile.md  action_ev_profile.json  action_ev_profile_state_dp.json  action_ev_profile_state_dp_summary.md  action_ev_profile_summary.md  action_ev_state_dp_equivalence.md  current_concurrency_audit.md  unattended_work_summary.md
rust/: Cargo.toml
rust/optimizer-core/: Cargo.toml
rust/optimizer-core/src/: lib.rs
rust/optimizer-worker/: Cargo.toml
rust/optimizer-worker/src/: main.rs
scripts/: acceptance_report.cmd  acceptance_report.ps1  benchmark_action_ev.py  build_tauri_windows.cmd  build_tauri_windows.ps1  build_windows_app.cmd  build_windows_app.ps1  generate_action_ev_benchmark_fixture.py  generate_gpt_audit.py  generate_rust_best_loadout_fixtures.py  release_gate.cmd  release_gate.ps1  smoke_packaged_backend.py  start_app.cmd  start_app.ps1  start_desktop.cmd  start_desktop.ps1
src/gear_optimizer/: __init__.py  acceptance.py  action_ev_protocol.py  action_ev_worker.py  action_types.py  agents.py  candidate_ev.py  conclusions.py  desktop_backend.py  desktop_jobs.py  desktop_protocol.py  desktop_service.py  desktop_ui_smoke.py  diagnostics.py  exporting.py  game_rules.py  inventory_migration.py  inventory_service.py  (+29 more)
tests/: test_acceptance.py  test_action_ev_protocol.py  test_action_ev_worker.py  test_action_types.py  test_agents.py  test_app_smoke.py  test_architecture.py  test_benchmark_action_ev.py  test_candidate_ev.py  test_conclusions.py  test_desktop_app.py  test_desktop_backend.py  test_desktop_jobs.py  test_desktop_protocol.py  test_desktop_service.py  test_diagnostics.py  test_ev_state.py  test_exporting.py  test_game_rules.py  test_inventory_migration.py  test_inventory_service.py  test_layout.py  test_package_exports.py  test_paths.py  test_piece_distribution.py  test_portfolio_ev.py  test_position_ev.py  test_profile_action_ev.py  test_profile_parallel_action_ev.py  test_readiness.py  test_release_manifest.py  test_reporting.py  test_runtime_logging.py  test_rust_golden_fixtures.py  test_scoring.py  test_scripts.py  test_set_plan_solver.py  test_smoke_packaged_backend.py  test_storage_io.py  test_strategy.py  (+7 more)
(+12 files in other folders)
