[project]
name = "gacha-gear-optimizer"
version = "0.1.0"
description = "Local visual optimizer for gacha gear substat probability and expected value analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
]

[project.scripts]
gacha-gear-optimizer = "gear_optimizer.launcher:desktop_main"
gacha-gear-optimizer-desktop = "gear_optimizer.launcher:desktop_main"
gacha-gear-optimizer-doctor = "gear_optimizer.diagnostics:main"
gacha-gear-optimizer-acceptance = "gear_optimizer.acceptance:main"
gacha-gear-optimizer-verify-release = "gear_optimizer.release_manifest:main"
gacha-gear-optimizer-readiness = "gear_optimizer.readiness:main"
gacha-gear-optimizer-ui-smoke = "gear_optimizer.desktop_ui_smoke:main"
gacha-gear-optimizer-migrate-inventory = "gear_optimizer.inventory_migration:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff==0.15.21",
]
desktop = [
  "PySide6-Essentials==6.11.1",
]
packaging = [
  "pyinstaller>=6.8",
  "PySide6-Essentials==6.11.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
