[workspace]
resolver = "2"
members = ["optimizer-core", "optimizer-worker"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[workspace.dependencies]
optimizer-core = { path = "optimizer-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
