[package]
name = "find-best-slot-desktop"
version = "0.1.0"
description = "Offline desktop shell for the BOX gear optimizer"
authors = ["findBestSlot contributors"]
edition = "2021"

[lib]
name = "find_best_slot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
thiserror = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
